--- a/index.html
+++ b/index.html
@@ -123,13 +123,14 @@
 <script>
 // --- KONFIGURASI FIREBASE (GANTI DENGAN MILIK ANDA) ---
 const firebaseConfig = {
-  apiKey: "ISI_API_KEY_ANDA",
-  authDomain: "PROJECT_ANDA.firebaseapp.com",
-  databaseURL: "https://PROJECT_ANDA.firebaseio.com",
-  projectId: "PROJECT_ANDA",
-  storageBucket: "PROJECT_ANDA.appspot.com",
-  messagingSenderId: "SENDER_ID",
-  appId: "APP_ID"
+  apiKey: "AIzaSyBGkyMU8UzjeGWsYRf2AO_txvsE0gPqsYY",
+  authDomain: "catatan-starlink.firebaseapp.com",
+  databaseURL: "https://catatan-starlink-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "catatan-starlink",
+  storageBucket: "catatan-starlink.firebasestorage.app",
+  messagingSenderId: "974645078052",
+  appId: "1:974645078052:web:d8cc92795feba8325990b1",
+  measurementId: "G-4JYN9TFNEE"
 };
 
 firebase.initializeApp(firebaseConfig);
@@ -271,3 +272,4 @@ function exportKeExcel() {
 </script>
 </body>
 </html>
+
