--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>STARLINK CLOUD v12</title>
+    <title>STARLINK CLOUD v13</title>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
@@ -27,11 +27,14 @@
         .form-group { margin-bottom: 10px; display: flex; flex-direction: column; }
         label { font-size: 11px; font-weight: bold; margin-bottom: 4px; color: #475569; }
         input, select { padding: 12px; border: 1px solid #cbd5e1; border-radius: 8px; font-size: 14px; }
+        .input-with-btn { display: flex; gap: 5px; }
+        .input-with-btn input { flex: 1; }
+        .btn-contact { background: #e2e8f0; border: 1px solid #cbd5e1; border-radius: 8px; width: 50px; cursor: pointer; font-size: 18px; }
         .hidden { display: none; }
         button { width: 100%; padding: 12px; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; }
         .btn-add { background: var(--primary); color: white; }
-        .btn-wa { background: #25d366; color: white; padding: 6px 10px; font-size: 10px; width: auto; text-decoration: none; border-radius: 5px; display: inline-block; margin-right: 5px; }
-        .list-item { background: white; padding: 12px; border-radius: 10px; margin-bottom: 10px; border-left: 5px solid #ddd; }
+        .btn-wa { background: #25d366; color: white; padding: 8px 12px; font-size: 10px; width: auto; text-decoration: none; border-radius: 5px; display: inline-block; margin-top: 5px; margin-right: 5px; }
+        .list-item { background: white; padding: 12px; border-radius: 10px; margin-bottom: 10px; border-left: 5px solid #ddd; position: relative; }
         .border-hutang { border-left-color: var(--danger); }
         .border-lunas { border-left-color: var(--success); }
         #login-page { position:fixed; top:0; left:0; width:100%; height:100%; background:var(--dark); z-index:9999; display:flex; align-items:center; justify-content:center; }
@@ -42,19 +45,19 @@
 <div id="login-page">
     <div class="card" style="width:85%; max-width:400px; text-align:center;">
         <h2 style="color:var(--primary); margin-bottom:5px;">STARLINK CLOUD</h2>
-        <p style="font-size:12px; color:#64748b;">Sistem Pembukuan Digital</p>
+        <p style="font-size:12px; color:#64748b;">Sistem Kasir & Pembukuan</p>
         <div class="form-group" style="margin-top:20px;">
             <input type="email" id="loginEmail" placeholder="Email Admin">
         </div>
         <div class="form-group">
             <input type="password" id="loginPassword" placeholder="Password">
         </div>
-        <button class="btn-add" onclick="login()">MASUK</button>
+        <button class="btn-add" onclick="login()">MASUK KE SISTEM</button>
         <p id="loginError" style="color:red; font-size:11px; margin-top:10px;"></p>
     </div>
 </div>
 
-<div style="background: var(--dark); color: white; padding: 15px; text-align: center; font-weight: bold;">🚀 STARLINK POS CLOUD</div>
+<div style="background: var(--dark); color: white; padding: 15px; text-align: center; font-weight: bold;">🚀 STARLINK POS v13</div>
 
 <div class="container">
     <div id="page-kasir" class="page active">
@@ -64,8 +67,15 @@
         </div>
         <div class="card">
             <div class="form-group">
-                <label>Nama Pelanggan / HP</label>
-                <input type="text" id="keterangan" placeholder="Contoh: Budi - 0812...">
+                <label>Nama Pelanggan</label>
+                <input type="text" id="keterangan" placeholder="Nama pelanggan">
+            </div>
+            <div class="form-group">
+                <label>Nomor WhatsApp</label>
+                <div class="input-with-btn">
+                    <input type="tel" id="nomorHP" placeholder="0812...">
+                    <button type="button" class="btn-contact" onclick="ambilKontak()">👤</button>
+                </div>
             </div>
             <div class="form-group">
                 <label>Layanan</label>
@@ -78,10 +88,10 @@
             </div>
             <div id="fieldModal" class="form-group"><label>Harga Modal</label><input type="number" id="modal" placeholder="0"></div>
             <div id="fieldJual" class="form-group"><label>Harga Jual</label><input type="number" id="jual" placeholder="0"></div>
-            <div id="fieldNominal" class="form-group hidden"><label>Nominal</label><input type="number" id="nominal" placeholder="0"></div>
+            <div id="fieldNominal" class="form-group hidden"><label>Nominal Transfer</label><input type="number" id="nominal" placeholder="0"></div>
             <div id="fieldAdmin" class="form-group hidden"><label>Biaya Admin (Laba)</label><input type="number" id="admin" placeholder="0"></div>
             <div class="form-group">
-                <label>Status</label>
+                <label>Status Bayar</label>
                 <select id="bayar">
                     <option value="Lunas">Lunas</option>
                     <option value="Belum Lunas">Belum Lunas (Hutang)</option>
@@ -102,14 +112,14 @@
     </div>
 
     <div id="page-laporan" class="page">
-        <h3>📊 Laporan Laba Bersih</h3>
+        <h3>📊 Laporan Laba</h3>
         <div class="card">
             <div class="stat-card"><span>Laba Hari Ini</span><b id="labaHari">0</b></div>
             <div class="stat-card"><span>Laba Bulan Ini</span><b id="labaBulan">0</b></div>
             <div class="stat-card" style="background:#f8fafc"><span>Total Seluruh Laba</span><b id="labaSemua" style="color:var(--primary)">0</b></div>
         </div>
         <button onclick="exportKeExcel()" style="background:#64748b; color:white; margin-bottom:10px;">Download Excel</button>
-        <button onclick="logout()" style="background:var(--danger); color:white;">Logout Aplikasi</button>
+        <button onclick="logout()" style="background:var(--danger); color:white;">Logout</button>
     </div>
 </div>
 
@@ -121,7 +131,7 @@
 </div>
 
 <script>
-// --- KONFIGURASI FIREBASE (GANTI DENGAN MILIK ANDA) ---
+// --- KONFIGURASI FIREBASE ---
 const firebaseConfig = {
   apiKey: "AIzaSyBGkyMU8UzjeGWsYRf2AO_txvsE0gPqsYY",
   authDomain: "catatan-starlink.firebaseapp.com",
@@ -133,11 +143,12 @@ const firebaseConfig = {
   measurementId: "G-4JYN9TFNEE"
 };
 
+// Inisialisasi Firebase
 firebase.initializeApp(firebaseConfig);
 const dbRef = firebase.database().ref('transaksi');
 const auth = firebase.auth();
 
-// --- LOGIKA AUTH ---
+// --- LOGIKA LOGIN ---
 function login() {
     const email = document.getElementById('loginEmail').value;
     const pass = document.getElementById('loginPassword').value;
@@ -146,18 +157,40 @@ function login() {
     });
 }
 
-function logout() { auth.signOut(); location.reload(); }
+function logout() { auth.signOut(); }
 
 auth.onAuthStateChanged(user => {
     if (user) {
         document.getElementById('login-page').style.display = 'none';
-        initApp();
+        initDataListener();
     } else {
         document.getElementById('login-page').style.display = 'flex';
     }
 });
 
-// --- LOGIKA APLIKASI ---
+// --- FITUR KONTAK & WA ---
+async function ambilKontak() {
+    try {
+        const props = ['name', 'tel'];
+        const contacts = await navigator.contacts.select(props, {multiple: false});
+        if (contacts.length) {
+            document.getElementById('keterangan').value = contacts[0].name[0];
+            let phone = contacts[0].tel[0].replace(/[^0-9]/g, "");
+            document.getElementById('nomorHP').value = phone;
+        }
+    } catch (e) { alert("Gunakan Chrome di Android + HTTPS untuk fitur ini."); }
+}
+
+function tagihWA(nama, hp, nominal, jenis) {
+    if(!hp) return alert("Nomor WA tidak ada!");
+    let cleanHP = hp.replace(/[^0-9]/g, "");
+    if(cleanHP.startsWith("0")) cleanHP = "62" + cleanHP.slice(1);
+    
+    const pesan = `Halo ${nama}, dari STARLINK mengingatkan tagihan ${jenis} Rp ${parseInt(nominal).toLocaleString()} belum lunas. Mohon segera diselesaikan. Terima kasih.`;
+    window.open(`https://wa.me/${cleanHP}?text=${encodeURIComponent(pesan)}`, '_blank');
+}
+
+// --- LOGIKA TRANSAKSI ---
 function toggleFields() {
     const jenis = document.getElementById('jenis').value;
     const isT = (jenis === "Transfer" || jenis === "Tarik Tunai");
@@ -171,6 +204,7 @@ function tambahData() {
     const jenis = document.getElementById('jenis').value;
     const bayar = document.getElementById('bayar').value;
     const ket = document.getElementById('keterangan').value;
+    const hp = document.getElementById('nomorHP').value;
     const skrg = new Date();
     
     let harga = 0, laba = 0;
@@ -183,21 +217,22 @@ function tambahData() {
         harga = j; laba = parseInt(j) - parseInt(m);
     }
 
-    if(!harga || !ket) return alert("Isi data dengan lengkap!");
+    if(!harga || !ket || !hp) return alert("Lengkapi Nama, WA, dan Harga!");
 
     dbRef.push({
         tgl: skrg.toISOString().split('T')[0],
         bln: skrg.getMonth() + 1,
         thn: skrg.getFullYear(),
         timestamp: Date.now(),
-        jenis, bayar, harga: parseInt(harga), laba: parseInt(laba), ket
+        jenis, bayar, hp, harga: parseInt(harga), laba: parseInt(laba), ket
     }).then(() => {
-        alert("Tersimpan ke Cloud!");
+        alert("Berhasil!");
         document.getElementById('keterangan').value = '';
+        document.getElementById('nomorHP').value = '';
     });
 }
 
-function initApp() {
+function initDataListener() {
     dbRef.on('value', (snapshot) => {
         const data = snapshot.val();
         renderSemua(data);
@@ -222,10 +257,11 @@ function renderSemua(data) {
                 <div class="list-item ${item.bayar === 'Belum Lunas' ? 'border-hutang' : 'border-lunas'}">
                     <b>${item.ket}</b> <br>
                     <small>${item.tgl} • ${item.jenis}</small><br>
-                    <small>Rp ${item.harga.toLocaleString()} (Laba: ${item.laba})</small>
+                    <small>Total: Rp ${item.harga.toLocaleString()} | WA: ${item.hp}</small>
                     <div style="margin-top:8px">
                         ${item.bayar === 'Belum Lunas' 
-                            ? `<button class="btn-wa" onclick="lunaskan('${item.id}')">LUNASKAN</button>` 
+                            ? `<button class="btn-wa" style="background:var(--success)" onclick="lunaskan('${item.id}')">LUNASKAN</button>
+                               <button class="btn-wa" onclick="tagihWA('${item.ket}', '${item.hp}', '${item.harga}', '${item.jenis}')">💬 TAGIH WA</button>` 
                             : `<span style="color:green; font-size:11px">✓ SELESAI</span>`}
                         <button class="btn-wa" style="background:gray" onclick="hapusSatu('${item.id}')">Hapus</button>
                     </div>
@@ -252,7 +288,7 @@ function renderSemua(data) {
 }
 
 function lunaskan(id) { dbRef.child(id).update({ bayar: 'Lunas' }); }
-function hapusSatu(id) { if(confirm("Hapus transaksi ini?")) dbRef.child(id).remove(); }
+function hapusSatu(id) { if(confirm("Hapus data ini?")) dbRef.child(id).remove(); }
 
 function bukaHalaman(pg, el) {
     document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
@@ -263,13 +299,13 @@ function bukaHalaman(pg, el) {
 
 function exportKeExcel() {
     dbRef.once('value', (s) => {
-        const ws = XLSX.utils.json_to_sheet(Object.values(s.val() || {}));
+        const items = Object.values(s.val() || {});
+        const ws = XLSX.utils.json_to_sheet(items);
         const wb = XLSX.utils.book_new();
         XLSX.utils.book_append_sheet(wb, ws, "Laporan");
-        XLSX.writeFile(wb, "Starlink_Cloud_Report.xlsx");
+        XLSX.writeFile(wb, "Starlink_Laporan.xlsx");
     });
 }
 </script>
 </body>
 </html>
-
